[gd_scene load_steps=58 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://oyun sprite/adventure_girl/png/Slide (1).png" type="Texture" id=2]
[ext_resource path="res://oyun sprite/adventure_girl/png/Slide (2).png" type="Texture" id=3]
[ext_resource path="res://oyun sprite/adventure_girl/png/Slide (3).png" type="Texture" id=4]
[ext_resource path="res://oyun sprite/adventure_girl/png/Slide (4).png" type="Texture" id=5]
[ext_resource path="res://oyun sprite/adventure_girl/png/Slide (5).png" type="Texture" id=6]
[ext_resource path="res://oyun sprite/adventure_girl/png/Idle (1).png" type="Texture" id=7]
[ext_resource path="res://oyun sprite/adventure_girl/png/Idle (2).png" type="Texture" id=8]
[ext_resource path="res://oyun sprite/adventure_girl/png/Idle (3).png" type="Texture" id=9]
[ext_resource path="res://oyun sprite/adventure_girl/png/Idle (4).png" type="Texture" id=10]
[ext_resource path="res://oyun sprite/adventure_girl/png/Idle (5).png" type="Texture" id=11]
[ext_resource path="res://oyun sprite/adventure_girl/png/Idle (6).png" type="Texture" id=12]
[ext_resource path="res://oyun sprite/adventure_girl/png/Idle (7).png" type="Texture" id=13]
[ext_resource path="res://oyun sprite/adventure_girl/png/Idle (8).png" type="Texture" id=14]
[ext_resource path="res://oyun sprite/adventure_girl/png/Idle (9).png" type="Texture" id=15]
[ext_resource path="res://oyun sprite/adventure_girl/png/Idle (10).png" type="Texture" id=16]
[ext_resource path="res://oyun sprite/adventure_girl/png/Dead (1).png" type="Texture" id=17]
[ext_resource path="res://oyun sprite/adventure_girl/png/Dead (2).png" type="Texture" id=18]
[ext_resource path="res://oyun sprite/adventure_girl/png/Dead (3).png" type="Texture" id=19]
[ext_resource path="res://oyun sprite/adventure_girl/png/Dead (4).png" type="Texture" id=20]
[ext_resource path="res://oyun sprite/adventure_girl/png/Dead (5).png" type="Texture" id=21]
[ext_resource path="res://oyun sprite/adventure_girl/png/Dead (6).png" type="Texture" id=22]
[ext_resource path="res://oyun sprite/adventure_girl/png/Dead (7).png" type="Texture" id=23]
[ext_resource path="res://oyun sprite/adventure_girl/png/Dead (8).png" type="Texture" id=24]
[ext_resource path="res://oyun sprite/adventure_girl/png/Dead (9).png" type="Texture" id=25]
[ext_resource path="res://oyun sprite/adventure_girl/png/Dead (10).png" type="Texture" id=26]
[ext_resource path="res://oyun sprite/adventure_girl/png/Shoot (1).png" type="Texture" id=27]
[ext_resource path="res://oyun sprite/adventure_girl/png/Shoot (2).png" type="Texture" id=28]
[ext_resource path="res://oyun sprite/adventure_girl/png/Shoot (3).png" type="Texture" id=29]
[ext_resource path="res://oyun sprite/adventure_girl/png/Jump (1).png" type="Texture" id=30]
[ext_resource path="res://oyun sprite/adventure_girl/png/Jump (2).png" type="Texture" id=31]
[ext_resource path="res://oyun sprite/adventure_girl/png/Jump (3).png" type="Texture" id=32]
[ext_resource path="res://oyun sprite/adventure_girl/png/Jump (4).png" type="Texture" id=33]
[ext_resource path="res://oyun sprite/adventure_girl/png/Jump (5).png" type="Texture" id=34]
[ext_resource path="res://oyun sprite/adventure_girl/png/Melee (1).png" type="Texture" id=35]
[ext_resource path="res://oyun sprite/adventure_girl/png/Melee (2).png" type="Texture" id=36]
[ext_resource path="res://oyun sprite/adventure_girl/png/Melee (3).png" type="Texture" id=37]
[ext_resource path="res://oyun sprite/adventure_girl/png/Melee (4).png" type="Texture" id=38]
[ext_resource path="res://oyun sprite/adventure_girl/png/Melee (5).png" type="Texture" id=39]
[ext_resource path="res://oyun sprite/adventure_girl/png/Melee (6).png" type="Texture" id=40]
[ext_resource path="res://oyun sprite/adventure_girl/png/Melee (7).png" type="Texture" id=41]
[ext_resource path="res://oyun sprite/adventure_girl/png/Run (1).png" type="Texture" id=42]
[ext_resource path="res://oyun sprite/adventure_girl/png/Run (2).png" type="Texture" id=43]
[ext_resource path="res://oyun sprite/adventure_girl/png/Run (3).png" type="Texture" id=44]
[ext_resource path="res://oyun sprite/adventure_girl/png/Run (4).png" type="Texture" id=45]
[ext_resource path="res://oyun sprite/adventure_girl/png/Run (5).png" type="Texture" id=46]
[ext_resource path="res://oyun sprite/adventure_girl/png/Run (6).png" type="Texture" id=47]
[ext_resource path="res://oyun sprite/adventure_girl/png/Run (7).png" type="Texture" id=48]
[ext_resource path="res://oyun sprite/adventure_girl/png/Run (8).png" type="Texture" id=49]
[ext_resource path="res://oyun sprite/adventure_girl/png/Jump (6).png" type="Texture" id=50]
[ext_resource path="res://oyun sprite/adventure_girl/png/Jump (8).png" type="Texture" id=51]
[ext_resource path="res://oyun sprite/adventure_girl/png/Jump (7).png" type="Texture" id=52]
[ext_resource path="res://oyun sprite/adventure_girl/png/Jump (9).png" type="Texture" id=53]
[ext_resource path="res://oyun sprite/adventure_girl/png/Jump (10).png" type="Texture" id=54]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": false,
"name": "slide",
"speed": 15.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": false,
"name": "dead",
"speed": 15.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": false,
"name": "attack",
"speed": 12.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ) ],
"loop": false,
"name": "jump",
"speed": 12.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 17 ), ExtResource( 17 ), ExtResource( 17 ) ],
"loop": false,
"name": "hurt",
"speed": 12.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ) ],
"loop": false,
"name": "melee",
"speed": 15.0
}, {
"frames": [ ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ) ],
"loop": true,
"name": "run",
"speed": 15.0
}, {
"frames": [ ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ) ],
"loop": false,
"name": "fall",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28.6555, 2.25755 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 28.6588, 46.1779 )

[node name="player" type="KinematicBody2D"]
position = Vector2( 238.902, 145.127 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -40.0063, -53.6242 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
animation = "melee"
frame = 6
playing = true
centered = false
flip_h = true

[node name="collision_2" type="CollisionShape2D" parent="."]
position = Vector2( 31.3686, 46.0046 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 31.3861, -2.49946 )
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 97.3356, 4.78061 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 56.303, -10.4915, 60.6048, -11.9254, 63.1142, -9.41606, 65.6236, -5.83121, 69.567, -1.1709, 73.5103, 5.64032, 72.9025, 11.6683, 71.7728, 19.576, 65.4466, 31.7765, 63.1142, 32.8852, 61.3218, 35.0361, 58.8124, 28.5834, 60.2464, 25.7155, 62.3973, 20.3382, 64.091, 13.2498, 62.7558, 5.99881, 60.2464, -3.32181, 57.3785, -7.26515 )
disabled = true

[node name="mele_flip_h_true" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="mele_flip_h_true"]
polygon = PoolVector2Array( -12.1676, 26.791, -14.1037, 22.8471, -16.3044, 13.1644, -15.4241, 4.36185, -15.394, -1.1709, -13.2431, -3.68028, -17.5449, -6.54817, -21.8468, 0.621536, -24.2266, 7.44273, -21.5859, 22.8471, -19.6958, 27.1494, -16.4695, 31.4513, -13.9601, 33.9606 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 16.2595, 0.802887 )
current = true
limit_left = -10000
limit_top = -1500
limit_right = 10000
limit_bottom = 1500
smoothing_enabled = true

[node name="jump_counter_time" type="Timer" parent="."]
wait_time = 2.31
one_shot = true
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="mele_flip_h_true" to="." method="_on_mele_flip_h_true_body_entered"]
[connection signal="timeout" from="jump_counter_time" to="." method="_on_jump_counter_time_timeout"]
